--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
+    "sass-embedded": "^1.83.4",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
     "vite": "^5.4.11"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.13",
+    "dexie": "^4.0.11",
+    "nanoid": "^5.0.9"
   }
 }
