--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vite": "^5.4.11"
   },
   "dependencies": {
+    "@iconify/svelte": "^4.2.0",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "nanoid": "^5.0.9"
